src/patternfly/components/Page/page.scss
/* ... */
.#{$page}__sidebar-header {
  padding-block-start: var(--#{$page}__sidebar-header--PaddingBlockStart);
  padding-block-end: var(--#{$page}__sidebar-header--PaddingBlockEnd);
  border-block-end: var(--#{$page}__sidebar-header--BorderBlockEndWidth) solid var(--#{$page}__sidebar-header--BorderBlockEndColor);
}

.#{$page}__sidebar-title {
  padding-inline-start: var(--#{$page}__sidebar-title--PaddingInlineStart);
  font-family: var(--#{$page}__sidebar-title--FontFamily);
  font-size: var(--#{$page}__sidebar-title--FontSize);
  font-weight: var(--#{$page}__sidebar-title--FontWeight);
  line-height: var(--#{$page}__sidebar-title--LineHeight);
}

.#{$page}__sidebar-body {
  padding-inline-start: var(--#{$page}__sidebar-body--PaddingInlineStart);
  padding-inline-end: var(--#{$page}__sidebar-body--PaddingInlineEnd);

  &:last-child {
    flex-grow: 1;
  }

  &.pf-m-page-insets {
    --#{$page}__sidebar-body--PaddingInlineEnd: var(--#{$page}__sidebar-body--m-page-insets--PaddingInlineEnd);
    --#{$page}__sidebar-body--PaddingInlineStart: var(--#{$page}__sidebar-body--m-page-insets--PaddingInlineStart);
  }

  &.pf-m-context-selector {
    --#{$page}__sidebar-body--PaddingInlineEnd: var(--#{$page}__sidebar-body--m-context-selector--PaddingInlineEnd);
    --#{$page}__sidebar-body--PaddingInlineStart: var(--#{$page}__sidebar-body--m-context-selector--PaddingInlineStart);
  }

  &.pf-m-inset-none {
    --#{$page}__sidebar-body--PaddingInlineEnd: 0;
    --#{$page}__sidebar-body--PaddingInlineStart: 0;
  }

  &.pf-m-fill {
    flex-grow: 1;
  }

  &.pf-m-no-fill {
    flex-grow: 0;
  }
}

.#{$page}__main-breadcrumb,
.#{$page}__main-tabs,
.#{$page}__main-section,
.#{$page}__main-wizard {
  &.pf-m-limit-width {
    > .#{$page}__main-body {
      max-width: var(--#{$page}--section--m-limit-width--MaxWidth);
    }

    &.pf-m-align-center {
      align-items: center;

      > .#{$page}__main-body {
        width: 100%;
      }
    }
  }
}

.#{$page}__main-breadcrumb,
.#{$page}__main-tabs,
.#{$page}__main-section,
.#{$page}__main-wizard,
.#{$page}__main-group,
.#{$page}__main-subnav {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;

  &.pf-m-overflow-scroll {
    position: relative;
    flex-shrink: 1;
    overflow: auto;
  }

  &.pf-m-shadow-bottom {
    z-index: var(--#{$page}--section--m-shadow-bottom--ZIndex);
    box-shadow: var(--#{$page}--section--m-shadow-bottom--BoxShadow);
  }

  &.pf-m-shadow-top {
    z-index: var(--#{$page}--section--m-shadow-top--ZIndex);
    box-shadow: var(--#{$page}--section--m-shadow-top--BoxShadow);
  }

  // Responsive height modifiers for sticky top/bottom
  @each $breakpoint, $breakpoint-value in $pf-page-v6--height-breakpoint-map {
    $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}-height, "");

    @include pf-v6-apply-height-breakpoint($breakpoint) {

      &.pf-m-sticky-top#{$breakpoint-name} {
        position: sticky;
        inset-block-start: 0;
        z-index: var(--#{$page}--section--m-sticky-top--ZIndex);
        box-shadow: var(--#{$page}--section--m-sticky-top--BoxShadow);
      }

      &.pf-m-sticky-bottom#{$breakpoint-name} {
        position: sticky;
        inset-block-end: 0;
        z-index: var(--#{$page}--section--m-sticky-bottom--ZIndex);
        box-shadow: var(--#{$page}--section--m-sticky-bottom--BoxShadow);
      }
    }
  }
}

// Main & Drawer
.#{$page}__main-container {
  display: flex;
  flex-direction: column;
  align-self: start;
  max-height: var(--#{$page}__main-container--MaxHeight);
  margin-inline-start: var(--#{$page}__main-container--MarginInlineStart);
  margin-inline-end: var(--#{$page}__main-container--MarginInlineEnd);
  background: var(--#{$page}__main-container--BackgroundColor);
  border: var(--#{$page}__main-container--BorderWidth) solid var(--#{$page}__main-container--BorderColor);
  border-radius: var(--#{$page}__main-container--BorderRadius);
}

.#{$page}__main-container,
.#{$page}__drawer {
  z-index: var(--#{$page}__main-container--ZIndex);
  grid-area: var(--#{$page}__main-container--GridArea);
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;

  @media screen and (min-width: $pf-v6-global--breakpoint--xl) {
    .#{$masthead} + &,
    .#{$page}__sidebar.pf-m-collapsed + & {
      --#{$page}__main-container--GridArea: var(--#{$page}--masthead--main-container--GridArea);
    }

    .#{$page}__sidebar:not(.pf-m-collapsed) + & {
      --#{$page}__main-container--MarginInlineStart: 0;
    }
  }

  &.pf-m-fill,
  &:has(.#{$page}__main-wizard) {
    align-self: stretch;
  }


  &:focus {
    outline: 0;
  }
}

.#{$page}__main,
.#{$page}__main-drawer,
.#{$page}__main-group {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.#{$page}__main {
  overflow: hidden;
}

.#{$page}__main-subnav {
  padding-block-start: var(--#{$page}__main-subnav--PaddingBlockStart);
  padding-block-end: var(--#{$page}__main-subnav--PaddingBlockEnd);
  padding-inline-start: var(--#{$page}__main-subnav--PaddingInlineStart);
  padding-inline-end: var(--#{$page}__main-subnav--PaddingInlineEnd);
  background-color: var(--#{$page}__main-subnav--BackgroundColor);
}
/* ... */

